@@ -10,8 +10,9 @@
 
 interface ReaderStarter
 {
-  void start_reader (in unsigned short nr_keys,
-              in unsigned short nr_iterations);
+  void read_no_data ();
+  void set_reader_properties (in unsigned short nr_keys,
+                              in unsigned short nr_iterations);
 };
 
 #endif /* SAMPLE_INFO_IDL */
