@@ -21,6 +21,38 @@ namespace CIAO_Reader_Test_Receiver_Impl
 {
   class Receiver_exec_i;
 
+  class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
+    : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
+      public virtual ::CORBA::LocalObject
+  {
+  public:
+    ConnectorStatusListener_exec_i (Receiver_exec_i &);
+    virtual ~ConnectorStatusListener_exec_i (void);
+
+    virtual
+    void on_inconsistent_topic( ::DDS::Topic_ptr ,
+                              const DDS::InconsistentTopicStatus & );
+    virtual
+    void on_requested_incompatible_qos( ::DDS::DataReader_ptr ,
+                              const DDS::RequestedIncompatibleQosStatus & );
+    virtual
+    void on_sample_rejected( ::DDS::DataReader_ptr ,
+                              const DDS::SampleRejectedStatus & );
+    virtual
+    void on_offered_deadline_missed( ::DDS::DataWriter_ptr ,
+                              const DDS::OfferedDeadlineMissedStatus & );
+    virtual
+    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr ,
+                              const DDS::OfferedIncompatibleQosStatus & );
+    virtual
+    void on_unexpected_status( ::DDS::Entity_ptr ,
+                              ::DDS::StatusKind );
+  private:
+    /// Maintains a handle that actually process the event
+    Receiver_exec_i &callback_;
+    bool has_run_;
+  };
+
   class Starter_exec_i
     : public virtual ::CCM_ReaderStarter,
       public virtual ::CORBA::LocalObject
@@ -29,9 +61,10 @@ namespace CIAO_Reader_Test_Receiver_Impl
     Starter_exec_i (Receiver_exec_i & callback);
     virtual ~Starter_exec_i (void);
 
-    virtual void
-    start_reader (CORBA::UShort nr_keys,
+    virtual void set_reader_properties (CORBA::UShort nr_keys,
                   CORBA::UShort nr_iterations);
+
+    virtual void read_no_data ();
 
   private:
     Receiver_exec_i &callback_;
@@ -58,8 +91,20 @@ namespace CIAO_Reader_Test_Receiver_Impl
     virtual ::CCM_ReaderStarter_ptr
     get_reader_start ();
 
-    void
-    start (CORBA::UShort nr_keys, CORBA::UShort nr_iterations);
+    virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
+    get_info_out_connector_status (void);
+
+    bool check_last ();
+    void run (void);
+    void read_no_data ();
+
+    ::CORBA::UShort iterations (void);
+
+    void iterations (::CORBA::UShort iterations);
+
+    ::CORBA::UShort keys (void);
+
+    void keys (::CORBA::UShort keys);
 
     // Operations from Components::SessionComponent.
     virtual void
@@ -77,9 +122,7 @@ namespace CIAO_Reader_Test_Receiver_Impl
     ::CCM_DDS::ReaderTest::Reader_var       reader_;
     CORBA::UShort   iterations_;
     CORBA::UShort   keys_;
-    bool            timer_started_;
-
-    void run (void);
+    bool            has_run_;
 
     void read_all ();
     void read_last ();
@@ -90,7 +133,6 @@ namespace CIAO_Reader_Test_Receiver_Impl
 
     typedef std::map<ACE_CString, DDS::InstanceHandle_t> Handle_Table;
     Handle_Table handles_;
-
   };
 
   extern "C" RECEIVER_EXEC_Export ::Components::EnterpriseComponent_ptr
