@@ -49,6 +49,7 @@ $ENV{"DANCE_TRACE_ENABLE"} = 0;
 $ENV{"CIAO_TRACE_ENABLE"} = 0;
 $ENV{"CIAO_LOG_LEVEL"} = 5;
 $ENV{"DANCE_LOG_LEVEL"} = 5;
+# $ENV{"DDS4CCM_NDDS_LOG_VERBOSITY"} =  31;
 
 
 sub create_targets {
@@ -206,8 +207,8 @@ for ($i = 0; $i < $nr_daemon; ++$i) {
     }
 }
 
-print "Sleeping 15 seconds to allow task to complete\n";
-sleep (15);
+print "Sleeping 30 seconds to allow task to complete\n";
+sleep (30);
 
 # Invoke executor - stop the application -.
 print "Invoking executor - stop the application -\n";
